--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postinstall": "pnpm prisma generate && pnpm prisma db push",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.15.11",
@@ -19,6 +21,7 @@
     "eslint-config-next": "13.2.4",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
+    "prisma": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3",
