--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.21.4"
   }
 }
