feat:done middleware login logout signup

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://jesus:christ@localhost:3600/swofdeath-db"
+secretKey = "dsdsfnwiicdsca";
