--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.4",
     "prisma": "^4.12.0",
     "react": "18.2.0",
