feat: first ver discord

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@
 
 DATABASE_URL="mysql://jesus:christ@localhost:3600/swofdeath-db"
 secretKey = "dsdsfnwiicdsca";
+"MTA5MzQ3MTM5NDg5OTE2NTE4NA.GTKPrP.lp2F7ZUZGvHB-JgPfBsKzgtl7uRbfvxYRPyCto"
