--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@discordjs/builders": "^1.6.1",
     "@prisma/client": "^4.12.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
@@ -17,6 +18,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
+    "discord.js": "^14.9.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "jsonwebtoken": "^9.0.0",
