clean: upgraded middleware FULL PROTECTION

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# use these in your .env files
 DATABASE_URL="mysql://jesus:christ@localhost:3600/swofdeath-db"
-secretKey = "dsdsfnwiicdsca";
-"MTA5MzQ3MTM5NDg5OTE2NTE4NA.GTKPrP.lp2F7ZUZGvHB-JgPfBsKzgtl7uRbfvxYRPyCto"
+DISCORD_TOKEN=<YOUR_DISCORD_TOKEN_BOT_TOKEN>
+CHANNEL_ID=<YOUR_DISCORD_CHANNEL_ID>
+
+# use these in your .env.local files
+SECRET_KEY=<YOUR_JWT_SECRET_KEY>
