--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^3.1.2",
     "next": "13.2.4",
     "prisma": "^4.12.0",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3",
